--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<img src="images/porfolio-20-300x500.jpg" alt=""/></a></div>
 		
 			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-21-300x500.jpg">
-				<img src="images/porfolio-21-300x500.jpg" alt=""/></a></div>
+				<img src="images/JA.jpg" alt=""/></a></div>
 		
 			<div class="p-item grid-sizer"><a class="venobox" href="images/porfolio-22-700x500.jpg">
 				<img src="images/porfolio-22-700x500.jpg" alt=""/></a></div>
